--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="viewport"
+      content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, width=device-width, viewport-fit=cover"
+    />
     <title>HappyGames Studio LLC Test Task</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <style>
       html,
       body {
@@ -28,12 +32,10 @@
       }
 
       body,
-      canvas,
       html {
         user-select: none;
       }
     </style>
-
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.2.4/pixi.min.js"
       integrity="sha512-Ch/O6kL8BqUwAfCF7Ie5SX1Hin+BJgYH4pNjRqXdTEqMsis1TUYg+j6nnI9uduPjGaj7DN4UKCZgpvoExt6dkw=="
@@ -48,5 +50,6 @@
     ></script>
     <script type="module" src="src/index.js"></script>
   </head>
+
   <body></body>
 </html>
